# GbbDongle

./: .gitignore  AGENTS.md  README.md  pyproject.toml  secrets.yaml.example
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot-auto-merge.yml  release.yaml
components/gbb_dongle/: __init__.py  gbb_dongle.cpp  gbb_dongle.h  gbb_protocol.cpp  gbb_protocol.h  log_ring_buffer.cpp  log_ring_buffer.h  modbus_executor.cpp  modbus_executor.h
docs/: protocol.md
firmware/: gbbdongle-dev.yaml  gbbdongle-kamami-dev.yaml  gbbdongle-kamami.yaml  gbbdongle-tcan485-dev.yaml  gbbdongle-tcan485.yaml  gbbdongle.yaml
firmware/boards/: kamami-esp32-eth-poe.yaml  lilygo-t-can485.yaml  waveshare-esp32-s3-rs485-can.yaml
firmware/common/: base.yaml  dev.yaml  wifi-dev.yaml  wifi.yaml
static/: index.html
tools/: cloud_roundtrip.py
